[tool.poetry]
name = "repl_python3_server-cloner-"
version = "0.3"
description = "By L RMN version 0.3 https://discord.gg/WFfjrQxnfH"
authors = ["L RMN"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
psutil = "^5.8.0"
pypresence = "^4.2.1"
colorama = "^0.4.4"
inquirer = "^3.1.3"
replit = "3.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
